maze.pledge.PledgeMaze.scala.error
Erreur de compilation :
PledgeMaze:17: error: value -= is not a member of Double
      virage-=1
            ^PledgeMaze:24: error: value += is not a member of Double
    virage+=1
          ^PledgeMaze:26: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return virage
         ^PledgeMaze:26: warning: enclosing method keepHandOnSideWall has result type Unit: return value discarded
  return virage
  ^